welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:4: error: value !> is not a member of Int
while (biscuit!>=3 && !croisement()) {avance; biscuit=biscuit+1;} 
              ^